Fix Assignee alignment on Issue list page

--- a/wide-github.css
+++ b/wide-github.css
@@ -38,6 +38,9 @@ body:not(.wgh-disabled) .repository-content #all_commit_comments .commit-comment
 body:not(.wgh-disabled) .repository-content #all_commit_comments .comment-holder {
   max-width: inherit !important;
 }
+body:not(.wgh-disabled) .repository-content .js-issue-row .col-3.text-right { /* Issue list Assignee alignment */
+  max-width: 288px !important;
+}
 
 /* Repository graph page */
 body:not(.wgh-disabled) .repository-content .capped-card-content { /* Graph cards on contributors / graph list */
